JumpScript/tests/baselines/reference/importAndVariableDeclarationConflict1.errors.txt
tests/cases/compiler/importAndVariableDeclarationConflict1.jump(5,1): error TS2440: Import declaration conflicts with local declaration of 'x'.


==== tests/cases/compiler/importAndVariableDeclarationConflict1.jump (1 errors) ====
    module m {
      export var m = '';
    }
    
    import x = m.m;
    ~~~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'x'.
    var x = '';
    